[project]
name = "mini-vlm"
version = "1.0"
description = "pytorch implementation of vision language model (pali-gemma)."
authors = [
    {name = "intisar",email = "intisarcs@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch (>=2.7.1,<3.0.0)",
    "transformers (>=4.52.4,<5.0.0)",
    "numpy (>=2.3.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
ruff = "^0.11.13"

