[tool.poetry]
name = "mini-vlm"
version = "1.0"
description = "pytorch implementation of vision language model (pali-gemma)."
authors = ["intisar <intisarcs@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
  { include = "mini_vlm", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.12"
torch = ">=2.7.1,<3.0.0"
transformers = ">=4.52.4,<5.0.0"
numpy = ">=2.3.0,<3.0.0"
sphinx = "^8.2.3"
myst-parser = "^4.0.1"
sphinx-rtd-theme = "^3.0.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
ruff = "^0.11.13"

[tool.poetry.group.document.dependencies]
sphinx = "^8.2.3"
sphinxcontrib-napoleon = "^0.7"
myst-parser = "^4.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
